test/libsolidity/syntaxTests/pragma/broken_version_3.sol
pragma solidity #8.0.0;
// ----
// ParserError 6281: (16-17): Token incompatible with Solidity parser as part of pragma directive.
// ParserError 5333: (0-23): Source file requires different compiler version (current compiler is ....
